--- a/coc-settings.json
+++ b/coc-settings.json
@@ -3,4 +3,6 @@
   "diagnostic.displayByAle": true,
 
   "coc.preferences.formatOnSaveFiletypes": ["css", "markdown", "javascript", "graphql", "html", "yaml",  "json", "python"],
+
+  "python.jediEnabled": false,
 }
