--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,12 @@
-set -g @plugin 'odedlaz/tmux-onedark-theme'
+# set -g @plugin 'KeitaNakamura/neodark.vim'
+set -g @plugin 'Determinant/tmux-colortag'
+set -g default-terminal 'screen-256color'
+set -ga terminal-overrides ',*256col*:Tc'
+set-option -g status-position top
 
-set -g @onedark_time_format "%I:%M %p"
+set -g mouse on
+
+# set -g @onedark_time_format "%I:%M %p"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
