--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,82 @@
-# set -g @plugin 'KeitaNakamura/neodark.vim'
-set -g @plugin 'Determinant/tmux-colortag'
-set -g default-terminal 'screen-256color'
-set -ga terminal-overrides ',*256col*:Tc'
-set-option -g status-position top
+# plugins
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @tpm_plugins "                 \
+  tmux-plugins/tpm                    \
+  soyuka/tmux-current-pane-hostname     \
+"
 
+# set scroll back history size
+set -g history-limit 5000
+
+# unbind C-b and change to `
+unbind-key C-b
+set -g prefix `
+bind-key ` send-prefix
+
+# don't rename windows automatically
+set-option -g allow-rename off
+
+# Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
 
-# set -g @onedark_time_format "%I:%M %p"
+# switch panes using Alt-arrow without prefix
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# reload config file (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.tmux.conf
+
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+######################
+### DESIGN CHANGES ###
+######################
+
+# loud or quiet?
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+setw -g monitor-activity off
+set -g bell-action none
+
+#  modes
+setw -g clock-mode-colour colour5
+setw -g mode-style 'fg=colour24 bg=colour232 bold'
+
+# panes
+set -g pane-border-style 'fg=colour8 bg=colour0'
+set -g pane-active-border-style 'bg=colour240 fg=colour8'
+
+# statusbar
+set -g status-position top
+set -g status-justify left
+set -g status-style 'bg=colour241 fg=colour137 dim'
+set -g status-left ''
+set -g status-right-length 100
+set -g status-right '#(/Users/adleywong/go/bin/gitmux -cfg .gitmux.conf "#{pane_current_path}") #[fg=colour16]#U@#H #[fg=colour233,bg=colour249] %m/%d %I:%M #[fg=colour233,bg=colour8]  #{cpu_percentage} | #{ram_percentage} | #{battery_percentage} #{battery_icon}'
+set -g status-left-length 20
+
+setw -g window-status-current-style 'fg=colour135 bg=colour60 bold'
+setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F'
+
+setw -g window-status-style 'fg=colour9 bg=colour242'
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
+
+# messages
+set -g message-style 'fg=colour232 bg=colour241 bold'
+
+# count windows from 1
+set -g base-index 1
+
+set -g default-terminal "screen-256color"
+
 run '~/.tmux/plugins/tpm/tpm'
